--- a/src/components/UnderConstruction.scss
+++ b/src/components/UnderConstruction.scss
@@ -17,7 +17,7 @@ body {
   animation: 0.6s infinite coneCycle;
 }
 
-@-webkit-keyframes coneCycle {
+@keyframes coneCycle {
   50% {
     fill: white;
   }
@@ -42,7 +42,7 @@ body {
   animation-direction: alternate-reverse;
 }
 
-@-webkit-keyframes winchCycle {
+@keyframes winchCycle {
   0% {
     transform: translateX(88px);
   }
@@ -60,7 +60,7 @@ body {
   animation-direction: alternate-reverse;
 }
 
-@-webkit-keyframes paintRoller {
+@keyframes paintRoller {
   0% {
     transform: translateY(-7px);
   }
@@ -99,7 +99,6 @@ body {
   }
 
   p {
-    margin-right: 40px;
     color: #fff;
     font-size: 1.6em;
     text-align: center;
