--- a/src/components/UnderConstruction.scss
+++ b/src/components/UnderConstruction.scss
@@ -92,21 +92,34 @@ body {
   padding: 20px;
 
   h2 {
-    margin-bottom: 10px;
+    margin: 0;
     color: #fff;
     font-size: 3em;
     text-align: center;
   }
 
   p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
     color: #fff;
     font-size: 1.6em;
     text-align: center;
+
+    &:before {
+      content: '';
+      width: 40px;
+      height: 1px;
+      margin-bottom: 30px;
+      background-color: #fff;
+    }
   }
 
   figure {
-    margin: 0;
+    margin: 0 40px 0 0;
     flex: 0;
+
     svg {
       min-width: 300px;
       width: 40%;
